--- a/serenity-app/res/drawable/spinner_item_background.xml
+++ b/serenity-app/res/drawable/spinner_item_background.xml
@@ -13,7 +13,8 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:exitFadeDuration="@android:integer/config_mediumAnimTime">
     <item android:state_activated="true"
         android:drawable="@android:color/darker_gray"
         />
