--- a/serenity-app/res/layout-large/activity_plex_app_main.xml
+++ b/serenity-app/res/layout-large/activity_plex_app_main.xml
@@ -24,12 +24,10 @@
 
      <Gallery
          android:id="@+id/mainGalleryMenu"
-         android:layout_marginLeft="10dp"
-         android:layout_marginRight="10dp"
-         android:layout_width="match_parent"
-         android:layout_height="150dp"
+         android:layout_width="fill_parent"
+         android:layout_height="80dp"
          android:animationDuration="1"
-         android:background="#50000000"
+         android:background="@drawable/content_panel_dark"
          android:spacing="50dp"
          android:layout_centerInParent="true"
          android:layout_gravity="center_vertical">
