--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -1,147 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+<us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <us.nineworlds.serenity.widgets.DrawerLayout
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+    <!-- The main content view -->
 
-        <!-- The main content view -->
+    <RelativeLayout
+        xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
+        android:id="@+id/movieBrowserBackgroundLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+
+        <ImageView
+            android:id="@+id/fanArt"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@drawable/movies"
+            android:scaleType="fitXY" />
 
         <RelativeLayout
-            xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
-            android:id="@+id/movieBrowserBackgroundLayout"
+            android:id="@+id/video_details_container"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent" >
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="@dimen/actionbarMargin"
+            android:background="@color/card_background"
+            android:padding="5dp"
+            android:visibility="invisible" >
 
-            <ImageView
-                android:id="@+id/fanArt"
-                android:background="@drawable/movies"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:scaleType="fitXY" />
+            <us.nineworlds.serenity.widgets.RoundedImageView
+                android:id="@+id/video_poster"
+                android:layout_width="200dp"
+                android:layout_height="250dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_margin="5dp"
+                app:corner_radius="5dp"
+                app:mutate_background="true" />
 
-            <RelativeLayout
-                android:id="@+id/video_details_container"
+            <TextView
+                android:id="@+id/movieBrowserPosterTitle"
+                style="@android:style/TextAppearance.Holo.Large"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_toRightOf="@+id/video_poster"
+                android:gravity="left|center_vertical"
+                android:paddingLeft="10dp"
+                android:textColor="#F0F0F0"
+                android:textStyle="bold"
+                tools:ignore="SelectableText" />
+
+            <TextView
+                android:id="@+id/movieSummary"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-	            android:layout_marginTop="@dimen/actionbarMargin"
-                android:layout_marginLeft="10dp"
-                android:background="@color/card_background"
-                android:visibility="invisible"
-                android:padding="5dp" >
+                android:layout_below="@+id/movieBrowserPosterTitle"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_toRightOf="@+id/video_poster"
+                android:ellipsize="marquee"
+                android:maxLines="8"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:textColor="#F0F0F0"
+                android:textSize="17.5sp"
+                tools:ignore="SelectableText" />
 
-                <us.nineworlds.serenity.widgets.RoundedImageView
-                    android:id="@+id/video_poster"
-                    android:layout_width="200dp"
-                    android:layout_height="250dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_margin="5dp"
-                    app:corner_radius="5dp"
-                    app:mutate_background="true" />
-
-                <TextView
-                    android:id="@+id/movieBrowserPosterTitle"
-                    style="@android:style/TextAppearance.Holo.Large"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_toRightOf="@+id/video_poster"
-                    android:gravity="left|center_vertical"
-                    android:paddingLeft="10dp"
-                    android:textColor="#F0F0F0"
-                    android:textStyle="bold"
-                    tools:ignore="SelectableText" />
-
-                <TextView
-                    android:id="@+id/movieSummary"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/movieBrowserPosterTitle"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_toRightOf="@+id/video_poster"
-                    android:ellipsize="marquee"
-                    android:maxLines="8"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:textColor="#F0F0F0"
-                    android:textSize="17.5sp"
-                    tools:ignore="SelectableText" />
-
-                <TextView
-                    android:id="@+id/videoTextExtra"
-                    style="@android:style/TextAppearance.Holo.Medium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@+id/movieInfoGraphicLayout"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_toRightOf="@+id/video_poster"
-                    android:gravity="left"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:textStyle="bold"
-                    android:visibility="invisible" />
-
-                <LinearLayout
-                    android:id="@+id/movieInfoGraphicLayout"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/video_poster"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_toRightOf="@+id/video_poster"
-                    android:gravity="bottom"
-                    android:orientation="horizontal" >
-                </LinearLayout>
-            </RelativeLayout>
+            <TextView
+                android:id="@+id/videoTextExtra"
+                style="@android:style/TextAppearance.Holo.Medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/movieInfoGraphicLayout"
+                android:layout_gravity="left"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_toRightOf="@+id/video_poster"
+                android:gravity="left"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:textStyle="bold"
+                android:visibility="invisible" />
 
             <LinearLayout
-                android:id="@+id/tableRow2"
+                android:id="@+id/movieInfoGraphicLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/video_poster"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="5dp"
+                android:layout_toRightOf="@+id/video_poster"
+                android:gravity="bottom"
+                android:orientation="horizontal" >
+            </LinearLayout>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/tableRow2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dip"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dip"
+            android:background="#A0000000"
+            android:gravity="bottom"
+            android:padding="5dp" >
+
+            <us.nineworlds.serenity.widgets.SerenityGallery
+                android:id="@+id/moviePosterGallery"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dip"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dip"
-                android:background="#A0000000"
-                android:gravity="bottom"
-                android:padding="5dp" >
+                android:layout_gravity="center|center_vertical"
+                android:nextFocusUp="@+id/categoryFilter"
+                android:spacing="25dp" >
 
-                <us.nineworlds.serenity.widgets.SerenityGallery
-                    android:id="@+id/moviePosterGallery"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center|center_vertical"
-                    android:nextFocusUp="@+id/categoryFilter"
-                    android:spacing="25dp" >
+                <requestFocus />
+            </us.nineworlds.serenity.widgets.SerenityGallery>
+        </LinearLayout>
+    </RelativeLayout>
+    <!-- The navigation drawer -->
 
-                    <requestFocus />
-                </us.nineworlds.serenity.widgets.SerenityGallery>
-            </LinearLayout>
-
-        </RelativeLayout>
-        <!-- The navigation drawer -->
-
+    <LinearLayout
+        android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="fill_parent"
+        android:layout_gravity="start"
+        android:layout_marginTop="?android:attr/actionBarSize"
+        android:background="#111"
+        android:orientation="vertical" >
+        
+        
         <ListView
-            android:id="@+id/left_drawer"
-            android:layout_width="240dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="#111"
+            android:id="@+id/left_drawer_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
             android:dividerHeight="0dp"
-            android:focusableInTouchMode="true"
-            android:layout_marginTop="?android:attr/actionBarSize" />
-    </us.nineworlds.serenity.widgets.DrawerLayout>
+            android:layout_weight="1"
+            android:nextFocusDown="@+id/drawer_settings"
+            android:focusableInTouchMode="true" />
 
-</merge>
+        <Button
+            android:id="@+id/drawer_settings"
+            style="@android:style/TextAppearance.Holo.Medium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/settings_icon"
+            android:background="@drawable/menu_item_selector"
+            android:layout_gravity="center_vertical"
+            android:focusable="true"
+            android:gravity="center_vertical"
+            android:text="Settings"
+            android:textColor="@android:color/white"
+            tools:ignore="SelectableText" />
+        
+        </LinearLayout>
+
+</us.nineworlds.serenity.widgets.DrawerLayout>
